# legendary-journey

./: LICENSE  Makefile  README.md  docker_setup.sh  legendary-journey.cabal  stack.yaml
app/: Main.hs  Station.hs
src/: AirqualityDataFetcher.hs  Estimator.hs  ParserTypes.hs  Stations.hs  StationsDataFetcher.hs  Types.hs
tools/: g.py  gis_fetcher.py  munmap  s_ssmap  statmap
