name:                legendary-journey
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/legendary-journey#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     AirqualityDataFetcher
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , bytestring
                     , http-conduit
  default-language:    Haskell2010


executable legendary-journey-exe
  hs-source-dirs:      app, src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , legendary-journey
                     , scotty
                     , aeson
                     , text
                     , warp
                     , http-conduit
                     , time
                     , random
                     , gps
  default-language:    Haskell2010

test-suite legendary-journey-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , legendary-journey
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/legendary-journey
